syntax = "proto3";

package cilium;

message NetworkFilter {
}
